--- a/documentation/app/styles/components/in-page-nav.scss
+++ b/documentation/app/styles/components/in-page-nav.scss
@@ -2,14 +2,14 @@
  * Copyright (c) HashiCorp, Inc.
  */
 
-.docs-InPageNav {
+.doc-InPageNav {
   display: none;
   width: 240px;
   align-self: start;
   position: sticky;
   top: 3rem;
 
-  .docs-InPageNav-label {
+  .doc-InPageNav-label {
     margin-bottom: 1.09rem;
   }
 
