--- a/documentation/app/components/in-page-nav/index.hbs
+++ b/documentation/app/components/in-page-nav/index.hbs
@@ -2,8 +2,8 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<aside class="docs-InPageNav">
-  <h4 class="docs-InPageNav-label">On this page</h4>
+<aside class="doc-InPageNav">
+  <h4 class="doc-InPageNav-label">On this page</h4>
   <nav>
     <ul>
       {{yield (hash Link=(component "in-page-nav/link"))}}
