feat: initial work on list-item-template docs

--- a/documentation/app/templates/application.hbs
+++ b/documentation/app/templates/application.hbs
@@ -23,6 +23,10 @@
 
         <S.Title>Components</S.Title>
         <S.Link @text="List Item" @route="components.list-item" />
+        <S.Link
+          @text="List Item Template"
+          @route="components.list-item-template"
+        />
       </Hds::SideNav::List>
     </:body>
   </Hds::SideNav>
