feat: add sidebar links on list-item-template code page

--- a/documentation/app/templates/components/list-item-template.hbs
+++ b/documentation/app/templates/components/list-item-template.hbs
@@ -835,6 +835,9 @@
       </div>
       <InPageNav as |I|>
         <I.Link @section="#how-to-use">How to use</I.Link>
+        <I.Link @section="#multiple-labels" @depth={{2}}>Multiple labels</I.Link>
+        <I.Link @section="#using-tooltips" @depth={{2}}>Tooltips</I.Link>
+        <I.Link @section="#interactivity" @depth={{2}}>Interactivity</I.Link>
         <I.Link @section="#component-api">Component API</I.Link>
         <I.Link @section="#label" @depth={{2}}>Label</I.Link>
         <I.Link @section="#label2" @depth={{2}}>Label2</I.Link>
