feat: add links to hds for font colors

--- a/documentation/app/templates/components/list-item-template.hbs
+++ b/documentation/app/templates/components/list-item-template.hbs
@@ -66,8 +66,11 @@
           </li>
           <li>
             On hover of clickable data, the background color of the object
-            hovered should change to “Surface/interactive-hover”. If the action
-            is to copy text then the default copy icon will show.
+            hovered should change to
+            <Hds::Link::Inline
+              @href="https://helios.hashicorp.design/foundations/colors?tab=palette#surface-1"
+            >“Surface/interactive-hover”</Hds::Link::Inline>. If the action is
+            to copy text then the default copy icon will show.
           </li>
           <li>
             When adding interactivity to an individual element such as a piece
@@ -90,10 +93,14 @@
           as needed.</p>
         <h3 id="title">Title</h3>
         <p>Any text used within the “title” should use HDS text style of
-          “Foreground/Strong”.</p>
+          <Hds::Link::Inline
+            @href="https://helios.hashicorp.design/foundations/colors?tab=palette#foreground-1"
+          >“Foreground/Strong”</Hds::Link::Inline>.</p>
         <h3 id="description">Description</h3>
         <p>Any text used within the “description” should use HDS text style of
-          “Foreground/Faint”.</p>
+          <Hds::Link::Inline
+            @href="https://helios.hashicorp.design/foundations/colors?tab=palette#foreground-1"
+          >“Foreground/Faint”</Hds::Link::Inline>.</p>
         <h3 id="icons">Icons</h3>
         <p>Any icon used should use the coloring as stated above based on the
           section they are within. Exceptions to this rule are if the icon is
